# bslib

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
bslib/: _version.py  bslib.py  bslib_database.csv  bslib_database.py  examples.ipynb
docs/: bslib.rst  conf.py  index.rst  modules.rst  requirements.txt
examples/: Untitled.ipynb  examples.ipynb
input/: PerModPAR.xlsx  bslib_database.csv  out.csv
src/: bslib.py  bslib_database.csv  bslib_database.py  examples.ipynb  models.py
tests/: conftest.py  test_bslib.py  test_bslib_ac_batmod.py
