[metadata]
name = bslib
description = A library for simulating PV batters storage systems.
author = Kai Rösken
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    bslib
install_requires =
    pandas>=1.3.3
    numpy>=1.20.3
python_requires = >=3
#package_dir =
#    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
bslib = py.typed

[flake8]
max-line-length = 160

[versioneer]
VCS = git
style = pep440
versionfile_source = bslib/_version.py
versionfile_build = bslib/_version.py
tag_prefix = v
parentdir_prefix = bslib-
